--- a/packages/wf-lua/PKGBUILD
+++ b/packages/wf-lua/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=5.4.7
 pkgrel=2
 epoch=
 pkgdesc="Lua scripting language"
-arch=("i686" "x86_64" "armv6h" "aarch64")
+arch=("i686" "x86_64" "armv6h" "aarch64" "arm64")
 url="https://www.lua.org"
 license=("MIT")
 source=(
@@ -19,8 +19,8 @@ source=(
 	"msys2-0004-fix-fseek-on-mingw.patch"
 	"msys2-link-implib.patch"
 )
-depends=(runtime-gcc-libs runtime-musl)
-makedepends=(runtime-musl-dev runtime-linenoise-dev)
+depends=()
+makedepends=(runtime-linenoise-dev)
 sha256sums=(
 	"9fbf5e28ef86c69858f6d3d34eccc32e911c1a28b4120ff3e84aaa70cfbf1e30"
 	"8a7584ca1d91e4cd4ab93db73fb72c7a03f71851d372a55ae412a59edbe5eb04"
@@ -31,7 +31,7 @@ sha256sums=(
 	"0e9f1fab745c8d6cd1fe37a32c8bd6cca665692aac5c130237e648abef86f632"
 )
 
-. "/wf/config/runtime-env-vars.sh"
+. "../../config/runtime-env-vars.sh"
 
 prepare() {
 	cd "lua-$pkgver"
@@ -51,6 +51,8 @@ build() {
 
 	if [ "$WF_HOST_OS" == "windows" ]; then
 		make mingw MYCFLAGS="$WF_RUNTIME_INCLUDES" MYLDFLAGS="$WF_RUNTIME_LDFLAGS"
+	elif [ "$WF_HOST_OS" == "macos" ]; then
+		make macosx MYCFLAGS="$WF_RUNTIME_INCLUDES" MYLDFLAGS="$WF_RUNTIME_LDFLAGS"
 	else
 		make linux MYCFLAGS="$WF_RUNTIME_INCLUDES -DLUA_USE_LINENOISE" MYLDFLAGS="$WF_RUNTIME_LDFLAGS" MYLIBS="-llinenoise"
 	fi
