--- a/packages/wf-lua-posix/darwin/PKGBUILD
+++ b/packages/wf-lua-posix/darwin/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=36.2.1
 pkgrel=1
 pkgrock=luaposix-"$pkgver"-1
 pkgdesc="Lua POSIX library"
-arch=("i686" "x86_64" "armv6h" "aarch64")
+arch=("i686" "x86_64" "armv6h" "aarch64" "arm64")
 url="https://github.com/luaposix/luaposix"
 license=("MIT")
 source=("$pkgname-$pkgver::git+https://github.com/luaposix/luaposix#tag=v$pkgver")
@@ -15,9 +15,9 @@ depends=(wf-lua)
 makedepends=(runtime-musl-dev wf-lua-dev)
 sha256sums=("SKIP")
 
-. "/wf/config/runtime-env-vars.sh"
+. "../../../config/runtime-env-vars.sh"
 
-. "../templates/luarocks-package.PKGBUILD"
+. "../../templates/luarocks-package.PKGBUILD"
 
 build() {
 	cd "$pkgname-$pkgver"
