--- a/packages/target-gba-nonfree/PKGBUILD
+++ b/packages/target-gba-nonfree/PKGBUILD
@@ -11,7 +11,7 @@ arch=(any)
 url=""
 license=("nonfree")
 source=(
-	"file:///Users/slacker/Downloads/official.bin"
+	"official.bin"
 )
 depends=()
 makedepends=()
